Added not found page

--- a/WhatToDo.Application/appsettings.json
+++ b/WhatToDo.Application/appsettings.json
@@ -1,4 +1,5 @@
 {
+  // TODO: Store connectionString in Azure key-vault
   "ConnectionStrings": {
     "WhatToDoConnection": "Server=(localdb)\\mssqllocaldb;Database=WhatToDo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
