Fixed an error message

--- a/WhatToDo.Application/appsettings.json
+++ b/WhatToDo.Application/appsettings.json
@@ -1,7 +1,7 @@
 {
   // TODO: Store connectionString in Azure key-vault
   "ConnectionStrings": {
-    "WhatToDoConnection": "Server=(localdb)\\mssqllocaldb;Database=WhatToDo12;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WhatToDoConnection": "Server=(localdb)\\mssqllocaldb;Database=WhatToDo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
